; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_if_bond.c_bondport_mux_machine.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_if_bond.c_bondport_mux_machine.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i32 }

@LAEventStart = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_7__*, i32, i8*)* @bondport_mux_machine to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @bondport_mux_machine(%struct.TYPE_7__* %0, i32 %1, i8* %2) #0 {
  %4 = alloca %struct.TYPE_7__*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  store %struct.TYPE_7__* %0, %struct.TYPE_7__** %4, align 8
  store i32 %1, i32* %5, align 4
  store i8* %2, i8** %6, align 8
  %7 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %8 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  switch i32 %9, label %34 [
    i32 128, label %10
    i32 130, label %14
    i32 129, label %19
    i32 132, label %24
    i32 131, label %29
  ]

10:                                               ; preds = %3
  %11 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %12 = load i32, i32* @LAEventStart, align 4
  %13 = call i32 @bondport_mux_machine_detached(%struct.TYPE_7__* %11, i32 %12, i8* null)
  br label %35

14:                                               ; preds = %3
  %15 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %16 = load i32, i32* %5, align 4
  %17 = load i8*, i8** %6, align 8
  %18 = call i32 @bondport_mux_machine_detached(%struct.TYPE_7__* %15, i32 %16, i8* %17)
  br label %35

19:                                               ; preds = %3
  %20 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %21 = load i32, i32* %5, align 4
  %22 = load i8*, i8** %6, align 8
  %23 = call i32 @bondport_mux_machine_waiting(%struct.TYPE_7__* %20, i32 %21, i8* %22)
  br label %35

24:                                               ; preds = %3
  %25 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %26 = load i32, i32* %5, align 4
  %27 = load i8*, i8** %6, align 8
  %28 = call i32 @bondport_mux_machine_attached(%struct.TYPE_7__* %25, i32 %26, i8* %27)
  br label %35

29:                                               ; preds = %3
  %30 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %31 = load i32, i32* %5, align 4
  %32 = load i8*, i8** %6, align 8
  %33 = call i32 @bondport_mux_machine_collecting_distributing(%struct.TYPE_7__* %30, i32 %31, i8* %32)
  br label %35

34:                                               ; preds = %3
  br label %35

35:                                               ; preds = %34, %29, %24, %19, %14, %10
  ret void
}

declare dso_local i32 @bondport_mux_machine_detached(%struct.TYPE_7__*, i32, i8*) #1

declare dso_local i32 @bondport_mux_machine_waiting(%struct.TYPE_7__*, i32, i8*) #1

declare dso_local i32 @bondport_mux_machine_attached(%struct.TYPE_7__*, i32, i8*) #1

declare dso_local i32 @bondport_mux_machine_collecting_distributing(%struct.TYPE_7__*, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
